--- a/styles/home.css
+++ b/styles/home.css
@@ -58,3 +58,166 @@ header {
   background: var(--white);
   color: var(--orange);
 }
+
+.main-banner {
+  background-image: url("../assets/main-banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 70%;
+
+  position: relative;
+  z-index: 1;
+}
+
+.main-banner:before {
+  content: "";
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.82) none repeat scroll 0 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.main-banner-content {
+  padding: 160px 0;
+}
+
+.main-banner-content h1,
+.main-banner-content span,
+.main-banner-content p {
+  color: var(--white);
+}
+
+.main-banner-content h1 {
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.main-banner-content span {
+  font-size: 30px;
+  display: block;
+  margin: 8px 0 16px;
+}
+
+.main-banner-content p {
+  font-size: 24px;
+  max-width: 70%;
+}
+
+.informative-container {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.informative-container-title {
+  font-size: 32px;
+  line-height: 34px;
+  margin-bottom: 60px;
+  position: relative;
+}
+
+.informative-container-title:before {
+  content: "";
+  position: absolute;
+  top: 140%;
+  left: 0;
+  width: 8px;
+  height: 8px;
+  background: var(--orange);
+  border-radius: 50%;
+}
+
+.informative-container-title:after {
+  content: "";
+  position: absolute;
+  top: 146%;
+  left: 6px;
+  width: 78px;
+  height: 3px;
+  background: var(--orange);
+}
+
+.informative-container-title span {
+  color: var(--orange);
+}
+
+.informative-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.informative-text h3 {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 28px;
+}
+
+.informative-text p {
+  margin-top: 4px;
+  line-height: 24px;
+  color: var(--grey-200);
+}
+
+.informative-text-footer {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.informative-text-footer button {
+  font-weight: 700;
+  color: var(--white);
+  background: var(--orange);
+  border: none;
+  padding: 15px 30px;
+  border-radius: 6px;
+
+  transition: 0.2s;
+}
+
+.informative-text-footer button:hover {
+  background-color: var(--orange-500);
+}
+
+.informative-text-footer span {
+  font-size: 22px;
+}
+
+.informative-text-footer span.highlited {
+  color: var(--orange);
+  font-family: "Oleo Script";
+  text-transform: uppercase;
+}
+
+.informative-images {
+  position: relative;
+}
+
+.main-image {
+  display: flex;
+  width: 305px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 6px solid white;
+}
+
+.main-image img,
+.secondary-image img {
+  width: 100%;
+  height: auto;
+  transform: scale(1.009);
+}
+
+.secondary-image {
+  display: flex;
+  width: 305px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
