--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body, button, textarea, input {
   font: 400 16px "Maven Pro", sans-serif;
   color: var(--grey-850);
