--- a/styles/global.css
+++ b/styles/global.css
@@ -38,3 +38,17 @@ a {
 li {
   list-style-type: none;
 }
+
+
+@media (min-width: 960px) {
+  .hide-on-desktop {
+    display: none;
+  }
+}
+
+@media (max-width: 960px) {
+  .hide-on-desktop {
+    display: block;
+  }
+}
+
