--- a/styles/home.css
+++ b/styles/home.css
@@ -6,6 +6,12 @@
 
 header {
   box-shadow: rgba(0, 0, 0, 0.75) 0px 13px 30px -12px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  background: var(--white);
 }
 
 .header-container {
@@ -60,6 +66,7 @@ header {
 }
 
 .main-banner {
+  margin-top: 104px;
   background-image: url("../assets/main-banner.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -506,5 +513,77 @@ footer iframe {
   .back-to-top-button {
     right: 16px;
     bottom: 25px;
+  }
+}
+
+@media (max-width: 960px) {
+  .logo-company {
+    order: 2;
+  }
+  .nav-bar-section {
+    order: 1;
+  }
+  .budget-button {
+    order: 3;
+  }
+
+  .nav-bar-section > ul {
+    opacity: 0;
+    top: -400%;
+
+    position: absolute;
+    left: 0;
+    background: white;
+    width: 100%;
+    flex-direction: column;
+    padding: 40px 0;
+    box-shadow: rgb(0 0 0 / 75%) 0px 13px 30px -12px;
+    z-index: -1;
+
+    transition: 0.4s;
+  }
+
+  .nav-bar-section > ul.show {
+    opacity: 1;
+    top: 100%;
+
+    transition: 0.4s;
+  }
+
+  .nav-bar-section > ul li {
+    width: 100%;
+    text-align: center;
+  }
+  
+  .nav-bar-section > ul li+li {
+    margin-left: 0;
+  }
+
+  .nav-bar-section a {
+    display: block;
+    width: 100%;
+    line-height: 44px;
+  }
+
+  .header-social-media {
+    padding-top: 40px;
+  }
+
+  .header-social-media > h3 {
+    font-weight: 400;
+  }
+
+  .header-social-media ul {
+    margin-top: 12px;
+  }
+
+  .header-social-media li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .header-social-media li a svg {
+    fill: var(--orange);
   }
 }
