--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,15 @@
+#specialties,
+#services,
+#contact {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  left: 0;
+  margin-top: -112px; /* esse valor varia de acordo com a altura do seu Header, se ele tiver 200px de altura coloque aqui -220px por exemplo */
+  background-color: transparent;
+  z-index: -1;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -19,6 +31,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 12px 0;
+  background: var(--white);
 }
 
 .logo-company {
@@ -517,6 +530,16 @@ footer iframe {
 }
 
 @media (max-width: 960px) {
+  .menu-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 3;
+  }
+
   .logo-company {
     order: 2;
   }
@@ -558,7 +581,7 @@ footer iframe {
 
   .nav-bar-section > ul {
     opacity: 0;
-    top: -400%;
+    transform: translate(0,-140%);
 
     position: absolute;
     left: 0;
@@ -569,14 +592,13 @@ footer iframe {
     box-shadow: rgb(0 0 0 / 75%) 0px 13px 30px -12px;
     z-index: -1;
 
-    transition: 0.4s;
+    transition: 0.5s;
   }
 
   .nav-bar-section > ul.show {
     opacity: 1;
     top: 100%;
-
-    transition: 0.4s;
+    transform: translate(0)
   }
 
   .nav-bar-section > ul li {
@@ -694,6 +716,10 @@ footer iframe {
     grid-template-columns: repeat(2, 1fr);
   }
 
+  img.search-icon {
+    opacity: 1;
+  }
+
   footer {
     padding: 48px 0;
   }
@@ -772,5 +798,18 @@ footer iframe {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .footer-bottom-area-content {
+    width: 63%;
+    text-align: center;
+  }
+
+  .rights {
+    line-height: 20px;
+  }
+
+  .developed-by {
+    margin-top: 12px;
   }
 }
